# cmake-learning

./: CMakeLists.txt  README.md  config.h.in  main.cc
lib/mymath/: CMakeLists.txt  mymath.h
